--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <br>بدعوتكم لحضور العرض الموسيقي بعنوان
 
-                   <br><span class="is-size-4 has-text-weight-bold has-text-primary">"صوت التسامح"</span>
+                   <br><span class="is-size-4 has-text-weight-bold has-text-primary">“صوت التسامح”</span>
                    <br>
                    بالتعاون مع شركة "دراجون" البلجيكية للإبداع الثقافي
 
